--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b0d019d1",
+   "id": "25b3302a",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cf72253",
+   "id": "2fa2747a",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3193fc",
+   "id": "206d5274",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82d1dbbc",
+   "id": "fd07396c",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "880912f8",
+   "id": "c080b5cf",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5cfb15c",
+   "id": "aefa2735",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "81ad8d89",
+   "id": "9590cbcc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:04.730930Z",
-     "iopub.status.busy": "2024-06-15T12:38:04.730730Z",
-     "iopub.status.idle": "2024-06-15T12:38:09.507199Z",
-     "shell.execute_reply": "2024-06-15T12:38:09.506527Z"
+     "iopub.execute_input": "2024-06-15T13:17:22.218965Z",
+     "iopub.status.busy": "2024-06-15T13:17:22.218759Z",
+     "iopub.status.idle": "2024-06-15T13:17:26.474402Z",
+     "shell.execute_reply": "2024-06-15T13:17:26.473816Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81efcca0",
+   "id": "3ffe0980",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b861f3",
+   "id": "37e99f36",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95179681",
+   "id": "6748e445",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf05820",
+   "id": "3c769e2b",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6109b7cc",
+   "id": "09947ec1",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "410dfdbd",
+   "id": "18cfa68c",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ceb240",
+   "id": "e87ead71",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c25e9c",
+   "id": "4f68f429",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95f9e3a2",
+   "id": "5f394ba3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:09.510264Z",
-     "iopub.status.busy": "2024-06-15T12:38:09.509781Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.645349Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.644729Z"
+     "iopub.execute_input": "2024-06-15T13:17:26.477368Z",
+     "iopub.status.busy": "2024-06-15T13:17:26.476905Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.335608Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.335005Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71fbffd6",
+   "id": "bf0bf96a",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "14454c77",
+   "id": "099fb018",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.647892Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.647684Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.651513Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.650962Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.337949Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.337742Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.341628Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.341135Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c92d8fd4",
+   "id": "79ca016a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa37fef5",
+   "id": "62221104",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ae904f",
+   "id": "6fcf5b79",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52eca54d",
+   "id": "a269f552",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89867a9a",
+   "id": "288f4a2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.654147Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.653628Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.702577Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.701899Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.343920Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.343554Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.387329Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.386731Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99ae8c9f",
+   "id": "fb4dad88",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "efb50631",
+   "id": "d4febac3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.705200Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.704682Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.779108Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.778462Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.389927Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.389487Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.455950Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.455303Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1dbe93",
+   "id": "da753f99",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f98b115",
+   "id": "d75696b1",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a7f85315",
+   "id": "cc3b816b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.781639Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.781257Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.814823Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.814168Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.458473Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.458115Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.488161Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.487533Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3da2c97",
+   "id": "4728cde8",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e21a1d8",
+   "id": "79bf5020",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07a1649",
+   "id": "798fb3d2",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe6d88d",
+   "id": "824b3d48",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f4dfa76",
+   "id": "a6788bc7",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fde8fa4d",
+   "id": "0f8f7126",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.817639Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.817135Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.821824Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.821235Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.490630Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.490290Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.494654Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.494034Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8632484",
+   "id": "a8e66d5b",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8e3506c1",
+   "id": "6ca3d9b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.824141Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.823784Z",
-     "iopub.status.idle": "2024-06-15T12:38:11.826963Z",
-     "shell.execute_reply": "2024-06-15T12:38:11.826337Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.496877Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.496550Z",
+     "iopub.status.idle": "2024-06-15T13:17:28.499653Z",
+     "shell.execute_reply": "2024-06-15T13:17:28.498936Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3bbd2f",
+   "id": "c32525bc",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5969a61f",
+   "id": "dc03118a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:11.829377Z",
-     "iopub.status.busy": "2024-06-15T12:38:11.828971Z",
-     "iopub.status.idle": "2024-06-15T12:38:14.414097Z",
-     "shell.execute_reply": "2024-06-15T12:38:14.413389Z"
+     "iopub.execute_input": "2024-06-15T13:17:28.501837Z",
+     "iopub.status.busy": "2024-06-15T13:17:28.501555Z",
+     "iopub.status.idle": "2024-06-15T13:17:30.950091Z",
+     "shell.execute_reply": "2024-06-15T13:17:30.949452Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04798a56",
+   "id": "bb6e5996",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e293e1ed",
+   "id": "086a40ad",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ad11f0",
+   "id": "c8197f18",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "429141b8",
+   "id": "ea59cf2e",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2468343e",
+   "id": "1afaf38e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:14.416879Z",
-     "iopub.status.busy": "2024-06-15T12:38:14.416459Z",
-     "iopub.status.idle": "2024-06-15T12:38:14.420570Z",
-     "shell.execute_reply": "2024-06-15T12:38:14.420046Z"
+     "iopub.execute_input": "2024-06-15T13:17:30.952735Z",
+     "iopub.status.busy": "2024-06-15T13:17:30.952345Z",
+     "iopub.status.idle": "2024-06-15T13:17:30.956240Z",
+     "shell.execute_reply": "2024-06-15T13:17:30.955499Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f218cdc2ac0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f52ac3deac0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ae43db",
+   "id": "c14b87f4",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fefeb86",
+   "id": "93403737",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c3d221",
+   "id": "39191940",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da08530d",
+   "id": "c7a1506c",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e1689cf3",
+   "id": "9ebade9e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:14.423002Z",
-     "iopub.status.busy": "2024-06-15T12:38:14.422618Z",
-     "iopub.status.idle": "2024-06-15T12:38:14.425903Z",
-     "shell.execute_reply": "2024-06-15T12:38:14.425243Z"
+     "iopub.execute_input": "2024-06-15T13:17:30.958777Z",
+     "iopub.status.busy": "2024-06-15T13:17:30.958428Z",
+     "iopub.status.idle": "2024-06-15T13:17:30.961750Z",
+     "shell.execute_reply": "2024-06-15T13:17:30.961069Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5da430ba",
+   "id": "6efe6cc2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-15T12:38:14.428217Z",
-     "iopub.status.busy": "2024-06-15T12:38:14.427842Z",
-     "iopub.status.idle": "2024-06-15T12:38:15.520596Z",
-     "shell.execute_reply": "2024-06-15T12:38:15.519962Z"
+     "iopub.execute_input": "2024-06-15T13:17:30.964062Z",
+     "iopub.status.busy": "2024-06-15T13:17:30.963737Z",
+     "iopub.status.idle": "2024-06-15T13:17:32.031486Z",
+     "shell.execute_reply": "2024-06-15T13:17:32.030790Z"
     }
    },
    "outputs": [
